--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/home.css">
-    <link rel="stylesheet" href="../css/extra.css">
+    <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./css/extra.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
@@ -23,19 +23,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../html/diary.html">Products</a>
+              <a class="nav-link" href="./html/diary.html">Products</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../html/aboutus.html">About us</a>
+              <a class="nav-link" href="./html/aboutus.html">About us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../html/contact.html">Contact Us</a>
+              <a class="nav-link" href="./html/contact.html">Contact Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../html/faq.html">FAQ'S</a>
+              <a class="nav-link" href="./html/faq.html">FAQ'S</a>
             </li>
             
           </ul>
@@ -53,21 +53,21 @@
 
     <section class="cards">
         <div class="card">
-            <img src="../content/calender 1.webp" alt="Flight Deals">
+            <img src="./content/calender 1.webp" alt="Flight Deals">
             <div class="content">
                 <h3>Sticker Calender</h3>
                 <p></p>
             </div>
         </div>
         <div class="card">
-            <img src="../content/animal calendars.jpg" alt="Hotels">
+            <img src="./content/animal calendars.jpg" alt="Hotels">
             <div class="content">
                 <h3>Animals Calender</h3>
                 <p></p>
             </div>
         </div>
         <div class="card">
-            <img src="../content/sprial4.webp" alt="Car Rentals">
+            <img src="./content/sprial4.webp" alt="Car Rentals">
             <div class="content">
                 <h3>Perforated Notebook</h3>
                
@@ -78,7 +78,7 @@
     <section class="calendar-section" id="calendar">
         <h2>Flight Calendar</h2>
         <p>Explore our calendar to find the best prices for your trip.</p>
-        <img src="../content/carosel1.jpg" alt="Calendar" class="homepage-calender-banner">
+        <img src="./content/carosel1.jpg" alt="Calendar" class="homepage-calender-banner">
     </section>
 <!-- carousel -->
 <div id="carouselExampleIndicators" class="carousel slide">
@@ -89,13 +89,13 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="../content/carosel2.png" class="d-block w-100" alt="No Internet">
+        <img src="./content/carosel2.png" class="d-block w-100" alt="No Internet">
       </div>
       <div class="carousel-item">
-        <img src="../content/carosel1.jpg" class="d-block w-100" alt="No Internet">
+        <img src="./content/carosel1.jpg" class="d-block w-100" alt="No Internet">
       </div>
       <div class="carousel-item">
-        <img src="../content/carosel3.png" class="d-block w-100" alt="No Internet">
+        <img src="./content/carosel3.png" class="d-block w-100" alt="No Internet">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -118,28 +118,28 @@
    <!-- cards 1 -->
   <section class="best-selling-section">
     <div class="card" style="width: 18rem;">
-        <img src="../content/wall-calemdar.webp" class="card-img-top" alt="No Internet">
+        <img src="./content/wall-calemdar.webp" class="card-img-top" alt="No Internet">
         <div class="card-body">
           <h5 class="card-title">Paris Wall-Calendar</h5>
           <p class="card-text"></p>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img src="../content/animal calendars.jpg" class="card-img-top" alt="No Internet">
+        <img src="./content/animal calendars.jpg" class="card-img-top" alt="No Internet">
         <div class="card-body">
           <h5 class="card-title">Animal calendar</h5>
           <p class="card-text"></p>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img src="../content/landscape-painting.webp" class="card-img-top" alt="No Internet">
+        <img src="./content/landscape-painting.webp" class="card-img-top" alt="No Internet">
         <div class="card-body">
           <h5 class="card-title">Land-Scape Painting</h5>
           <p class="card-text"> </p>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img src="../content/perfect plannrs.jpg" class="card-img-top" alt="No Internet">
+        <img src="./content/perfect plannrs.jpg" class="card-img-top" alt="No Internet">
         <div class="card-body">
           <h5 class="card-title">The Perfect Planner by BK</h5>
           <p class="card-text"></p>
@@ -151,28 +151,28 @@
   <!-- cards 2 -->
   <section class="best-selling-section">
     <div class="card" style="width: 18rem;">
-      <img src="../content/matylda-mystles.jpg" class="card-img-top" alt="No Internet">
+      <img src="./content/matylda-mystles.jpg" class="card-img-top" alt="No Internet">
       <div class="card-body">
         <h5 class="card-title">Matilda Myres 2024</h5>
         <p class="card-text"></p>
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="../content/portable note book.jpg" class="card-img-top" alt="No Internet">
+      <img src="./content/portable note book.jpg" class="card-img-top" alt="No Internet">
       <div class="card-body">
         <h5 class="card-title">Notebook Portable</h5>
         <p class="card-text"></p>
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="../content/palnner-sticker.jpg" class="card-img-top" alt="No Internet">
+      <img src="./content/palnner-sticker.jpg" class="card-img-top" alt="No Internet">
       <div class="card-body">
         <h5 class="card-title">Planner stickers</h5>
         <p class="card-text"></p>
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="../content/a5 hourly.jpg" class="card-img-top" alt="No Internet">
+      <img src="./content/a5 hourly.jpg" class="card-img-top" alt="No Internet">
       <div class="card-body">
         <h5 class="card-title">A5 Hourly Planner</h5>     
         <p class="card-text"></p>
@@ -206,7 +206,7 @@
                     <h2>PRODUCTS</h2>
                     <ul>
                         <li><a href="./calender.html">Calendars</a></li>
-                        <li><a href="../html/diary.html">Diaries</a></li>
+                        <li><a href="./html/diary.html">Diaries</a></li>
                         <li><a href="./cards.html">Sales</a></li>
                         <li><a href="./best-selling.html">Best-selling</a></li>
                     </ul>
